z-index corrections

--- a/src/index.css
+++ b/src/index.css
@@ -14,13 +14,13 @@
   -webkit-text-size-adjust: 100%;
 
   --z-index-world: 1;
-  --z-index-vignette: 2;
+  --z-index-vignette: 3;
   --z-index-credits: 3;
   --z-index-collected-chapters: 4;
   --z-index-joystick: 5;
   --z-index-header: 6;
   --z-index-approutes: 7;
-  --z-index-toggle-sounds: 6;
+  --z-index-toggle-sounds: 2;
   --z-index-skip-intro: 9;
   --z-index-endings: 10;
   --z-index-side-menu: 11;
